# ba-website

./: .gitignore  .gitlab-ci.yaml  LICENSE  README.md  Vagrantfile  docker-compose.yml  docker-compose_registry.yml
ba_website/: Dockerfile  classic_env  manage.py  prepare_classic.sh  pyproject.toml  run_classic.sh  run_docker.sh
ba_website/ba_backend/: apps.py  models.py  urls.py  views.py
ba_website/ba_website/: asgi.py  settings.py  urls.py  wsgi.py
performance_tests/: pyproject.toml  run_tests.py
performance_tests/locustfiles/: database_bytes.py  database_int.py  database_string.py  factorial.py
performance_tests/pyplot_files/: ExtractDataCsv.py  TableDataGenerator.py  analyze_data.py  database_int_125_latency.py  database_int_125_rps.py  database_int_250_latency.py  database_int_250_rps.py  database_int_step350_latency.py  database_int_step350_latency_zoom.py  database_int_step350_rps.py  database_int_step350_rps_zoom.py  database_string_10_latency.py  database_string_10_rps.py  database_string_25_latency.py  database_string_25_rps.py  database_string_step40_latency.py  database_string_step40_rps.py  factorial_250_latency.py  factorial_250_rps.py  factorial_500_latency.py  factorial_500_rps.py  factorial_step800_latency.py  factorial_step800_latency_zoom.py  factorial_step800_rps.py  factorial_step800_rps_zoom.py
performance_tests/table_data/: 2020-08-13T00:58:04__database_int_125_latency.json  2020-08-13T00:58:04__database_int_125_rps.json  2020-08-13T00:58:04__database_int_250_latency.json  2020-08-13T00:58:04__database_int_250_rps.json  (+17 more)
(+103 files in other folders)
