[tool.poetry]
name = "ba-website"
version = "1"
description = ""
authors = [
    "Neil Schark <neil@schark.eu>"
]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.6"
psycopg2-binary = "^2.8.5"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
rope = "^0.17.0"
black = {version = "^19.10b0", allow-prereleases = true}
pylint-django = "^2.0.15"
